bk_ida/gobmkida/c2/do_play_move
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_play_move/src/engine/board.c:4376:44: error: use of undeclared identifier 'dword_A7D19C'
if ( board[v185] || ( v105 = liberty_mark, dword_A7D19C[( _QWORD)v181] == liberty_mark) ) 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_play_move/src/engine/board.c:4418:1: error: use of undeclared identifier 'dword_A7D19C'
dword_A7D19C[( _QWORD)v181] = v105; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_play_move/src/engine/board.c:4835:6: error: use of undeclared identifier 'byte_9B389E'
&& ( byte_9B389E[( _QWORD)v181] != ( _BYTE)v136 || string[239].neighborlist[( _QWORD)v181 + 159] != v20) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_play_move/src/engine/board.c:4915:6: error: use of undeclared identifier 'byte_9B388D'
&& ( byte_9B388D[( _QWORD)v181] != ( _BYTE)v136 || string[239].neighborlist[( _QWORD)v181 + 142] != v20) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_play_move/src/engine/board.c:4957:6: error: use of undeclared identifier 'byte_9B388D'
&& ( byte_9B388D[( _QWORD)v181] != ( _BYTE)v136 || string[239].neighborlist[( _QWORD)v181 + 142] != v20) ) 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_play_move/src/obj/1/board.o] Error 1
